<resources>
    <string name="app_name">Jawline Exercises - Face yoga</string>
    <string name="Apply_Face_Serum">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/apply%20face%20serum.m4v?alt=media&amp;token=d784610b-a889-4278-aaa9-cfe2386d006d</string>
    <string name="Back_of_the_Neck">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/back%20of%20the%20neck.m4v?alt=media&amp;token=7dddab95-fee1-43e9-80e1-5b64b813c9ed</string>
    <string name="Blow_Up">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/blow%20up.m4v?alt=media&amp;token=bee4b4fe-c081-47bc-ae71-d7f3f0dd7c8d</string>
    <string name="Blowfish">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/blowfish.m4v?alt=media&amp;token=03b4df55-0434-4dc3-87ed-e9f3fd445045</string>
    <string name="Center_of_the_Neck">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/center%20of%20the%20neck.m4v?alt=media&amp;token=1e84b627-3941-4b87-a1db-a7b1f6fc729f</string>
    <string name="Cheek_Smoother_Left_to_Right">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/cheek%20smoother%20left%20to%20right.m4v?alt=media&amp;token=a8b20a01-b86c-47d3-9ae6-96f8e9023b2c</string>
    <string name="Cheek_Smoother_Right_to_Left">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/cheek%20smoother%20right%20to%20left.m4v?alt=media&amp;token=59c0b00a-52da-4906-81b9-6966b2963222</string>
    <string name="Cheekbones_Massage">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/cheekbones%20massage.m4v?alt=media&amp;token=683f9107-36fd-4ab4-8408-c5a7134c49d4</string>
    <string name="Cheeks_Smoother">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/cheeks%20smoother.m4v?alt=media&amp;token=5b78f8b7-d38f-49ef-8e25-c25aae460af1</string>
    <string name="Cheeks_to_Temples_Left_to_Right">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/cheeks%20to%20temples%20left%20to%20right.m4v?alt=media&amp;token=d20e573f-34ba-4341-9490-2c898b533c06</string>
    <string name="Cheeks_to_Temples_Right_to_Left">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/cheeks%20to%20temples%20right%20to%20left.m4v?alt=media&amp;token=ae5c5b20-e8b6-4b23-ad50-4bf2f9cfa31f</string>
    <string name="Chew_Up">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/chew%20up.m4v?alt=media&amp;token=ebc28b65-d411-4f73-beb1-a0cdae730f57</string>
    <string name="Chin_Smoother">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/chin%20smoother.m4v?alt=media&amp;token=cbaf2a40-4dee-44f7-bb90-b4d1fca0aab9</string>
    <string name="Chin_to_Jaw_Smoother">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/chin%20to%20jaw%20smoother.m4v?alt=media&amp;token=ddb27fe2-a7e3-4255-809f-c45ec4151e2a</string>
    <string name="Chin_to_Neck_Strokes">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/chin%20to%20neck%20strokes.m4v?alt=media&amp;token=b29ba5ff-0862-455a-9145-603745e9816b</string>
    <string name="Circle_Around_the_Eyes">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circle%20around%20the%20eyes.m4v?alt=media&amp;token=e77f41cb-4d19-41c9-beba-325c29dfaf1a</string>
    <string name="Circles_on_the_Forehead">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circles%20on%20the%20forehead.m4v?alt=media&amp;token=926e88e6-afde-48da-a283-22e166a9a8bf</string>
    <string name="Circular_Motion_Below_Nose">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circular%20motion%20below%20nose.m4v?alt=media&amp;token=95d009cc-8e7c-4e0a-85e2-541d65e343b4</string>
    <string name="Circular_Motion_on_Cheeks">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circular%20motion%20on%20cheeks.m4v?alt=media&amp;token=534e7c36-d657-4e89-96b9-f205c14a0899</string>
    <string name="Circular_Motion_on_Eye">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circular%20motion%20on%20eye.m4v?alt=media&amp;token=6c87a5e4-e59a-4c7a-9c78-42714da53fd8</string>
    <string name="Circular_Motion_on_Jawline_and_Lymph">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circular%20motion%20on%20jawline%20and%20lymph.m4v?alt=media&amp;token=0a3c10e3-7307-4439-93a0-c727ef521ad2</string>
    <string name="Circular_Motion_on_Neck">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circular%20motion%20on%20neck.m4v?alt=media&amp;token=8f392eda-51d5-4038-b27f-d43bd523a040</string>
    <string name="Circular_Motions">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/circular%20motions.m4v?alt=media&amp;token=5530f1f4-5609-4dca-9950-a58606796c77</string>
    <string name="Crow_Feet_Preventer">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/crow%20feet%20preventer.m4v?alt=media&amp;token=16e502b8-4628-45d5-8494-0c8a23800d6c</string>
    <string name="Dark_Circle_Remover">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/dark%20circle%20remover.m4v?alt=media&amp;token=86869b9f-1de9-4fe7-b21c-829e13199671</string>
    <string name="Eye_De_Puffer">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/eye%20de-puffer.m4v?alt=media&amp;token=9e27de6b-3644-46a1-aff2-98d6e5564bbf</string>
    <string name="Eyebrow_Smoother_Left_to_Right">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/eyebrow%20smoother%20left%20to%20right.m4v?alt=media&amp;token=9bd22d23-6d2b-4c13-93e2-8cc984c5d88f</string>
    <string name="Eyebrow_Smoother_Right_to_Left">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/eyebrow%20smoother%20right%20to%20left.m4v?alt=media&amp;token=a653ea8c-3764-496d-94b3-36bcfa9489de</string>
    <string name="Eyelid_Massage">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/eyelid%20massage.m4v?alt=media&amp;token=6f52c290-a06a-45aa-b8ff-8c075797db6c</string>
    <string name="Flick_Your_Cheeks">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/flick%20your%20cheeks.m4v?alt=media&amp;token=669cc792-0a22-49bb-9e4e-0825b96758bc</string>
    <string name="Forehead_Dab">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/forehead%20dab.m4v?alt=media&amp;token=e68a4138-c2dc-4a47-8374-00fa70c1e2a1</string>
    <string name="Forehead_Massage">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/forehead%20massage.m4v?alt=media&amp;token=a1f060aa-85ee-4dbc-8bc7-c42b27bbd824</string>
    <string name="Forehead_Massage_With_Fingers">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/forehead%20massage%20with%20fingers.m4v?alt=media&amp;token=7b70eead-340b-42f4-8ab7-2bd9ffb341c8</string>
    <string name="Half_Circles">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/half%20circles.m4v?alt=media&amp;token=ea81da46-6ac4-4492-8db2-7727eab81b55</string>
    <string name="Half_Neck_Rotation">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/half%20neck%20rotation.m4v?alt=media&amp;token=b830a995-b6cc-492e-91a9-49fad06d822b</string>
    <string name="Hold_Pose">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/hold%20pose.m4v?alt=media&amp;token=87bd163c-e058-4141-85ca-58176bc7f91c</string>
    <string name="Jaw_Massage">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/jaw%20massage.m4v?alt=media&amp;token=db40dc0b-511a-45a0-9bbe-d22a45f05195</string>
    <string name="Jaw_Smoother">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/jaw%20smoother.m4v?alt=media&amp;token=3414559c-f3f1-40af-9421-f678dcf6af19</string>
    <string name="Jawline_Massage">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/jawline%20massage.m4v?alt=media&amp;token=508b6e7d-281f-4acf-9a4e-9483f84f3337</string>
    <string name="Jawline_Massage_With_Fist">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/jawline%20massage%20with%20fist.m4v?alt=media&amp;token=52b766a5-1e8b-4c30-8a60-b43766208cd0</string>
    <string name="Jawline_Smoother_Left_to_Right">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/jawline%20smoother%20left%20to%20right.m4v?alt=media&amp;token=116e906b-6397-47de-b531-dddbe78fa276</string>
    <string name="Jawline_Smoother_Right_to_Left">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/jawline%20smoother%20right%20to%20left.m4v?alt=media&amp;token=2c74ccf3-6f82-4267-820f-85d8e8afd3ee</string>
    <string name="Kiss_the_Sky">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/kiss%20the%20sky.m4v?alt=media&amp;token=b05c9c62-6071-4e0b-900d-58c75492e36d</string>
    <string name="Lip_Tuck">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/lip%20tuck.m4v?alt=media&amp;token=4d23f650-104c-4c79-a6ad-1c8297e342ee</string>
    <string name="Massage_Your_Ears">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/massage%20your%20ears.m4v?alt=media&amp;token=e0d84a26-12fd-4d4c-9f31-42c87f4f8f81</string>
    <string name="Massage_Your_Face">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/massage%20your%20face.m4v?alt=media&amp;token=e1199176-9e71-4e77-b309-5c2a67ce7d6b</string>
    <string name="Massage_Your_Temples">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/massage%20your%20temples.m4v?alt=media&amp;token=ad83035c-4e95-4cea-b974-cdadee110f7c</string>
    <string name="Neck_Massage">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/neck%20massage.m4v?alt=media&amp;token=cbfb1c77-216e-4741-8348-e8f2f0fa5ed3</string>
    <string name="Neck_Massage_With_Fingers">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/neck%20massage%20with%20fingers.m4v?alt=media&amp;token=ce85bad6-9178-4a14-8659-e6dfb9318811</string>
    <string name="Neck_Massage_With_Palms">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/neck%20massage%20with%20palms.m4v?alt=media&amp;token=b1eb9312-4459-41c3-bd93-46955b44426e</string>
    <string name="Neck_Rotation">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/neck%20rotation.m4v?alt=media&amp;token=cc890d23-1382-4d3c-ad7d-b53ab376df82</string>
    <string name="Neck_Warmer">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/neck%20warmer.m4v?alt=media&amp;token=5b6d26a5-8e0c-4da6-a04e-217859245aaa</string>
    <string name="Neck_to_Jawline">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/neck%20to%20jawline.m4v?alt=media&amp;token=73574b77-cd3e-438f-ba85-d960e483a086</string>
    <string name="One_Sided_Upward_Strokes">https://firebasestorage.googleapis.com/v0/b/face-yoga-app-89f4a.appspot.com/o/one%20sided%20upward%20strokes.m4v?alt=media&amp;token=42daa813-afbe-44b2-b3f0-b76fb4fa17f2</string>
    <string name="eye_circles">Eye Circles</string>
    <string name="cheeks_yoga">Cheeks Yoga</string>
    <string name="eyes_yoga">Eyes Yoga</string>
    <string name="settings">Setting</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_app">About</string>
</resources>