<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:scrollbars="none">

    <ImageView
        android:id="@+id/iv_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/iv_appbaractivity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/medium"
        android:text="Activity"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_appbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/medium"
                    android:text="Activity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/regular"
                    android:text="03 Courses"
                    android:textColor="#585858"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/cheeksYogaImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:adjustViewBounds="true"
                    android:tag="@string/cheeks_yoga"
                    android:src="@drawable/challenge_big_min" />


                <ImageView
                    android:id="@+id/challengeImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:adjustViewBounds="true"
                    android:tag="@string/eye_circles"
                    android:src="@drawable/cheeks_min" />


                <ImageView
                    android:id="@+id/eyesYogaImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:adjustViewBounds="true"
                    android:tag="@string/eyes_yoga"
                    android:src="@drawable/eyes_min" />


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
