<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llTopBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:paddingVertical="3dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="3dp"
                    android:paddingBottom="3dp"
                    android:src="@drawable/arrow_circle_left"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/semibold"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/ic_share_app" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/medium"
                        android:includeFontPadding="false"
                        android:text="@string/share_app"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:alpha="0.1"
                    android:background="@color/black" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llRateUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/ic_rate_us" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/medium"
                        android:includeFontPadding="false"
                        android:text="@string/rate_us"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:alpha="0.1"
                    android:background="@color/black" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llPrivacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/ic_privacy_policy" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/medium"
                        android:includeFontPadding="false"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:alpha="0.1"
                    android:background="@color/black" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llAboutApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/ic_info" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/medium"
                        android:includeFontPadding="false"
                        android:text="@string/about_app"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!--    <FrameLayout-->
    <!--        android:id="@+id/bottom"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:orientation="vertical">-->

    <!--        <com.facebook.shimmer.ShimmerFrameLayout-->
    <!--            android:id="@+id/shimmer_layout"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_alignParentBottom="true"-->
    <!--            android:background="@drawable/bg_card_ads"-->
    <!--            app:shimmer_auto_start="true"-->
    <!--            app:shimmer_base_color="#ccc">-->

    <!--            <include layout="@layout/ad_unifiled_regular" />-->

    <!--        </com.facebook.shimmer.ShimmerFrameLayout>-->

    <!--        <FrameLayout-->
    <!--            android:id="@+id/ad_container"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="bottom" />-->

    <!--    </FrameLayout>-->


</androidx.appcompat.widget.LinearLayoutCompat>
